--- a/part_2/lections/theme00-requests/package.json
+++ b/part_2/lections/theme00-requests/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "decache": "^4.6.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1"
   }
 }
