--- a/part_2/lections/theme00-express/package.json
+++ b/part_2/lections/theme00-express/package.json
@@ -4,6 +4,7 @@
     "decache": "^4.6.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sync-request": "^6.1.0"
   }
 }
